--- a/app/src/App.css
+++ b/app/src/App.css
@@ -33,3 +33,78 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  background-color: var(--mantine-color-dark-);
+}
+
+.ag-root-wrapper {
+  background-color: var(--mantine-color-riaGray-12) !important;
+}
+
+.ag-header {
+  background-color: var(--mantine-color-riaGray-12) !important;
+}
+
+.ag-header-cell {
+  background-color: var(--mantine-color-riaGray-7);
+  color: var(--mantine-color-riaGray-1);
+  font-weight: 300;
+  font-size: 13px;
+  border-right: 1px solid var(--mantine-color-riaGray-12) !important;
+}
+
+.ag-cell {
+  background-color: var(--mantine-color-riaGray-9);
+  color: white;
+  border-right: 1px solid var(--mantine-color-riaGray-12) !important;
+  font-weight: 300;
+}
+
+.ag-row {
+  font-size: 14px !important;
+  border: 1px solid var(--mantine-color-riaGray-12) !important;
+}
+
+.flash-added {
+  /* border-left: 3px solid #ffd54f; */
+  animation: rowPulse 2s ease-in-out;
+  border: 2px solid var(--mantine-color-riaAccent-4) !important;
+}
+
+.flash-removed .ag-row {
+  animation: rowPulseRemove 2s ease-out;
+  background-color: var(--mantine-color-riaGray-1) !important;
+}
+
+.flash-removed .ag-cell {
+  background-color: var(--mantine-color-riaGray-3) !important;
+  color: var(--mantine-color-dark-1) !important;
+}
+
+@keyframes rowPulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(30, 100, 180, 0.8);
+  }
+  25% {
+    box-shadow: 0 0 0 4px rgba(30, 100, 180, 0.6);
+  }
+  50% {
+    box-shadow: 0 0 0 0 rgba(30, 100, 180, 0.8);
+  }
+  75% {
+    box-shadow: 0 0 0 4px rgba(30, 100, 180, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(30, 100, 180, 0);
+  }
+}
+
+@keyframes rowPulseRemove {
+  0% {
+    box-shadow: 0 0 0 0 var(--mantine-color-riaGray-3);
+  }
+  100% {
+    box-shadow: 0 0 0 12px rgba(255, 213, 79, 0);
+  }
+}
